crates/compiler/src/snapshots/compiler__tokenizer__test__rc_data-8.snap
---
source: crates/compiler/src/tokenizer.rs
expression: a

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: "{{'</textarea>'}}"
- EndTag: textarea

