crates/compiler/src/snapshots/compiler__tokenizer__test__test-11.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes:
      - name: wrong-attr
        value: ~
        name_loc:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 13
            line: 1
            column: 14
        location:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 13
            line: 1
            column: 14
    self_closing: false
- Text:
    raw: "=123 />"
    ops:
      bits: 2

