crates/compiler/src/snapshots/compiler__tokenizer__test__test-12.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes: []
    self_closing: false
- EndTag: a

