crates/compiler/src/snapshots/compiler__tokenizer__test__test-14.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes:
      - name: attr
        value: ~
        name_loc:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 7
            line: 1
            column: 8
        location:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 9
            line: 1
            column: 10
    self_closing: false

