crates/compiler/src/snapshots/compiler__tokenizer__test__test-18.snap
---
source: crates/compiler/src/tokenizer.rs
expression: t

---
- Comment: " nested <!"
- Text:
    raw: " text -->"
    ops:
      bits: 2

